--- a/Dartin/Dartin.Application/Views/MatchDefinitionView.xaml
+++ b/Dartin/Dartin.Application/Views/MatchDefinitionView.xaml
@@ -51,8 +51,10 @@
 		<Label Content="Legs to win set" Grid.Row="3" Grid.Column="0"/>
         <TextBox Text="{Binding CurrentObject.LegsToWinSet, UpdateSourceTrigger=PropertyChanged}" Grid.Row="3" Grid.Column="1"/>
 
-		<Label Content="Score to win leg" Grid.Row="4" Grid.Column="0"/>
-        <TextBox Text="{Binding CurrentObject.ScoreToWinLeg, UpdateSourceTrigger=PropertyChanged}" Grid.Row="4" Grid.Column="1"/>
+        <Label Content="Score to win leg" Grid.Row="4" Grid.Column="0"/>
+        <!--<TextBox Text="{Binding CurrentObject.Configuration.ScoreToWinLeg, UpdateSourceTrigger=PropertyChanged}" Grid.Row="4" Grid.Column="1"/>-->
+        <RadioButton Grid.Row="4" Grid.Column="1" IsChecked="{Binding IsChecked501}">501</RadioButton>
+        <RadioButton Grid.Row="4" Grid.Column="1" Margin="0, 15, 15, 15" IsChecked="{ Binding IsChecked301 }">301</RadioButton>
 
 		<Button x:Name="Exit" Content="Exit" Grid.Row="5" Grid.Column="0"/>
 		<Button x:Name="SaveGameAndExit" Content="Save game and exit" Grid.Row="5" Grid.Column="1"/>
