--- a/Dartin/Dartin.Application/Views/MatchReportView.xaml
+++ b/Dartin/Dartin.Application/Views/MatchReportView.xaml
@@ -21,26 +21,9 @@
         </Grid>
 
         <Grid Grid.Row="0" HorizontalAlignment="Left">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition></ColumnDefinition>
-                <ColumnDefinition></ColumnDefinition>
-            </Grid.ColumnDefinitions>
 
-            <Button Grid.Column="0" Width="100" Content="Back"></Button>
+            <Button Width="100" Content="Back"></Button>
 
-            <ListView Grid.Column="1" ItemsSource="{Binding ExistingMatches}">
-                <ListView.View>
-                    <GridView>
-                        <GridViewColumn Header="Name" Width="120" DisplayMemberBinding="{Binding Name}" />
-                        <!--declare a GridViewColumn for each property-->
-                    </GridView>
-                </ListView.View>
-                <ListView.ItemContainerStyle>
-                    <Style TargetType="ListViewItem">
-                        <!--<EventSetter Event="PreviewMouseLeftButtonDown" Handler="ListViewSelection" x:Name="ListViewSelection" />-->
-                    </Style>
-                </ListView.ItemContainerStyle>
-            </ListView>
         </Grid>
 
         <Grid Grid.Row="1">
@@ -79,20 +62,23 @@
                             <TreeView ItemsSource="{Binding MatchInfo1.Sets}">
                                 <TreeView.ItemTemplate>
                                     <HierarchicalDataTemplate ItemsSource="{Binding Legs}" DataType="{x:Type VM:Set}">
-                                        <Label Content="set 1"></Label>
+                                        <Label Content="{Binding SetToString}"></Label>
                                         <HierarchicalDataTemplate.ItemTemplate>
                                             <HierarchicalDataTemplate ItemsSource="{Binding Turns}" DataType="{x:Type VM:Leg}">
-                                                <Label Content="Leg 1"></Label>
+                                                <Label Content="{Binding LegToString}"></Label>
                                                 <HierarchicalDataTemplate.ItemTemplate>
                                                     <HierarchicalDataTemplate ItemsSource="{Binding Tosses}" DataType="{x:Type VM:Turn}">
-                                                        <Label Content="Turn"></Label>
+                                                        <Label Content="{Binding TurnToString}"></Label>
                                                         <HierarchicalDataTemplate.ItemTemplate>
                                                             <DataTemplate DataType="{x:Type VM:Toss}">
-                                                                <StackPanel Orientation="Horizontal">
+                                                                    <Label Content="{Binding TossToString}"></Label>
+                                                                
+                                                                <!--<StackPanel Orientation="Horizontal">
+                                                                    
                                                                     <TextBlock Text="{Binding Multiplier}"></TextBlock>
                                                                     <TextBlock Text=" "></TextBlock>
                                                                     <TextBlock Text="{Binding Score}"></TextBlock>
-                                                                </StackPanel>
+                                                                </StackPanel>-->
                                                             </DataTemplate>
                                                         </HierarchicalDataTemplate.ItemTemplate>
                                                     </HierarchicalDataTemplate>
@@ -123,20 +109,21 @@
                             <TreeView ItemsSource="{Binding MatchInfo2.Sets}">
                                 <TreeView.ItemTemplate>
                                     <HierarchicalDataTemplate ItemsSource="{Binding Legs}" DataType="{x:Type VM:Set}">
-                                        <Label Content="set 1"></Label>
+                                        <Label Content="{Binding SetToString}"></Label>
                                         <HierarchicalDataTemplate.ItemTemplate>
                                             <HierarchicalDataTemplate ItemsSource="{Binding Turns}" DataType="{x:Type VM:Leg}">
-                                                <Label Content="Leg 1"></Label>
+                                                <Label Content="{Binding LegToString}"></Label>
                                                 <HierarchicalDataTemplate.ItemTemplate>
                                                     <HierarchicalDataTemplate ItemsSource="{Binding Tosses}" DataType="{x:Type VM:Turn}">
-                                                        <Label Content="Turn"></Label>
+                                                        <Label Content="{Binding TurnToString}"></Label>
                                                         <HierarchicalDataTemplate.ItemTemplate>
                                                             <DataTemplate DataType="{x:Type VM:Toss}">
-                                                                <StackPanel Orientation="Horizontal">
+                                                                <Label Content="{Binding TossToString}"></Label>
+                                                                <!--<StackPanel Orientation="Horizontal">
                                                                     <TextBlock Text="{Binding Multiplier}"> </TextBlock>
                                                                     <TextBlock Text=" "></TextBlock>
                                                                     <TextBlock Text="{Binding Score}"></TextBlock>
-                                                                </StackPanel>
+                                                                </StackPanel>-->
                                                             </DataTemplate>
                                                         </HierarchicalDataTemplate.ItemTemplate>
                                                     </HierarchicalDataTemplate>
@@ -218,7 +205,7 @@
 
                 <!-- row 2 -->
 
-                <Grid Grid.Row="1" Grid.Column="0">
+                <!--<Grid Grid.Row="1" Grid.Column="0">
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
@@ -270,12 +257,12 @@
                     <TextBlock Grid.Row="3" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="4" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="5" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
-                </Grid>
+                </Grid>-->
 
                 <!-- row 3 -->
 
 
-                <Grid Grid.Row="2" Grid.Column="0">
+                <Grid Grid.Row="1" Grid.Column="0">
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
@@ -296,7 +283,7 @@
                     <TextBlock Grid.Row="6" Text="tba" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                     <TextBlock Grid.Row="7" Text="{Binding TotalThreeDartersP1}" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                 </Grid>
-                <Grid Grid.Row="2" Grid.Column="1">
+                <Grid Grid.Row="1" Grid.Column="1">
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
@@ -318,7 +305,7 @@
                     <TextBlock Grid.Row="7" Text="180's" Foreground="White" HorizontalAlignment="Center" FontSize="14"></TextBlock>
                 </Grid>
 
-                <Grid Grid.Row="2" Grid.Column="2">
+                <Grid Grid.Row="1" Grid.Column="2">
                     <Grid.RowDefinitions>
                         <RowDefinition></RowDefinition>
                         <RowDefinition></RowDefinition>
