--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -11,6 +11,7 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <converters:BrushColorConverter x:Key="BrushColorConverterKey"></converters:BrushColorConverter>
+        <converters:ValueSumConverter x:Key="ValueSumConverterKey"></converters:ValueSumConverter>
     </UserControl.Resources>
 
     <Border Background="#ffffff" >
@@ -97,6 +98,34 @@
                     </ListView>
                 </Grid>
             </Border>
+
+            <Grid Grid.Row="2" Grid.Column="1">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition/>
+                </Grid.RowDefinitions>
+
+                <Label Grid.Row="0" Grid.Column="0" Content="180s"/>
+                <Label Grid.Row="0" Grid.Column="1" Content="Total 180s"/>
+                <Label Grid.Row="0" Grid.Column="2" Content="180s"/>
+
+                <Label Grid.Row="1" Grid.Column="0" Content="{Binding Player1Counter180}"/>
+                <Label Grid.Row="1" Grid.Column="1">
+                    <Label.Content>
+                        <MultiBinding Converter="{StaticResource ValueSumConverterKey}">
+                            <Binding Path="Player1Counter180"/>
+                            <Binding Path="Player2Counter180"/>
+                        </MultiBinding>
+                    </Label.Content>
+                </Label>
+                <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2Counter180}"/>
+
+            </Grid>
 
             <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center">
                 <Grid MinWidth="320">
