--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -6,12 +6,9 @@
              xmlns:local="clr-namespace:Dartin.Views"
              xmlns:cal="clr-namespace:Caliburn.Micro;assembly=Caliburn.Micro.Platform"
              xmlns:custom="clr-namespace:Dartin.Controls"
-             xmlns:converters="clr-namespace:Dartin.Converters"
+             xmlns:conv="clr-namespace:Dartin.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <UserControl.Resources>
-        <converters:BrushColorConverter x:Key="BrushColorConverterKey"></converters:BrushColorConverter>
-    </UserControl.Resources>
 
     <Border Background="#ffffff" >
         <Grid>
@@ -32,8 +29,8 @@
             <Label Grid.Row="0" Grid.Column="2" Content="{Binding BestOf}" HorizontalAlignment="Right" Padding="12" FontSize="16"></Label>
 
             <Label Grid.Row="1" Grid.Column="0" Content="{Binding Player1.Name}" HorizontalAlignment="Left" Padding="12" FontSize="16"></Label>
-            <Image Grid.Row="1" Grid.Column="0" Visibility="{Binding PlayerOneTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" />
-            <Image Grid.Row="1" Grid.Column="0" Visibility="{Binding PlayerOneStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-left.png" Height="10" Width="10" Margin="30,0,0,0"/>
+            <Image Grid.Row="1" Grid.Column="0" Visibility="{Binding PlayerTurnIndicator, Converter={conv:BoolToVisibilityConverter}}" Source="/Resources/indicator.png" Height="10" Width="10" />
+            <Image Grid.Row="1" Grid.Column="0" Visibility="{Binding PlayerLegStartIndicator, Converter={conv:BoolToVisibilityConverter}}" Source="/Resources/turnindicator-left.png" Height="10" Width="10" Margin="30,0,0,0"/>
 
             <Grid Grid.Column="1">
                 <Grid.ColumnDefinitions>
@@ -55,10 +52,10 @@
                 <Label Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0" Content="{Binding SetText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
                 <Label Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0" Content="{Binding LegText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,30,0,0"></Label>
             </Grid>
-            
-            <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2.Name}" HorizontalAlignment="Right" Padding="12" FontSize="16"></Label>
-            <Image Grid.Row="1" Grid.Column="2" Visibility="{Binding PlayerTwoTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" />
-            <Image Grid.Row="1" Grid.Column="2" Visibility="{Binding PlayerTwoStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-right.png" Height="10" Width="10" Margin="0,0,30,0" />
+
+            <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2.Name}" HorizontalAlignment="Right" Padding="12" FontSize="16"/>
+            <Image Grid.Row="1" Grid.Column="2" Visibility="{Binding PlayerTurnIndicator, Converter={conv:InverseBoolToVisibilityConverter}}" Source="/Resources/indicator.png" Height="10" Width="10" />
+            <Image Grid.Row="1" Grid.Column="2" Visibility="{Binding PlayerLegStartIndicator, Converter={conv:InverseBoolToVisibilityConverter}}" Source="/Resources/turnindicator-right.png" Height="10" Width="10" Margin="0,0,30,0" />
 
             <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center">
                 <Grid MinWidth="320">
@@ -76,22 +73,22 @@
                     <ListView ItemsSource="{Binding Player1Turns}" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256">
                         <ListView.Resources>
                             <Style TargetType="{x:Type TextBlock}">
-                                <Setter Property="Foreground" Value="{Binding Path=Valid, Converter={StaticResource BrushColorConverterKey}}"></Setter>
+                                <Setter Property="Foreground" Value="{Binding Path=Valid, Converter={conv:BrushColorConverter}}"/>
                             </Style>
                         </ListView.Resources>
                         <ListView.View>
                             <GridView AllowsColumnReorder="False">
-                                <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"></GridViewColumn>
-                                <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"></GridViewColumn>
-                                <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"></GridViewColumn>
-                                <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"></GridViewColumn>
+                                <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"/>
+                                <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"/>
+                                <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"/>
+                                <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
                     <ListView ItemsSource="{Binding Player1Remainders}" Grid.Row="0" Grid.Column="4" Margin="0" MinWidth="64" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
                         <ListView.View>
                             <GridView AllowsColumnReorder="False">
-                                <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"></GridViewColumn>
+                                <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -114,22 +111,22 @@
                     <ListView ItemsSource="{Binding Player2Remainders}" Grid.Row="0" Grid.Column="0" Margin="0" MinWidth="64" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
                         <ListView.View>
                             <GridView AllowsColumnReorder="False">
-                                <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"></GridViewColumn>
+                                <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
                     <ListView  ItemsSource="{Binding Player2Turns}" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="1" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256">
                         <ListView.Resources>
                             <Style TargetType="{x:Type TextBlock}">
-                                <Setter Property="Foreground" Value="{Binding Path=Valid, Converter={StaticResource BrushColorConverterKey}}"></Setter>
+                                <Setter Property="Foreground" Value="{Binding Path=Valid, Converter={conv:BrushColorConverter}}"/>
                             </Style>
                         </ListView.Resources>
                         <ListView.View>
                             <GridView AllowsColumnReorder="False" >
-                                <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"></GridViewColumn>
-                                <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"></GridViewColumn>
-                                <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"></GridViewColumn>
-                                <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"></GridViewColumn>
+                                <GridViewColumn Header="Total" Width="64" DisplayMemberBinding="{Binding Score}"/>
+                                <GridViewColumn Header="3" Width="64" DisplayMemberBinding="{Binding Tosses[2].TotalScore}"/>
+                                <GridViewColumn Header="2" Width="64" DisplayMemberBinding="{Binding Tosses[1].TotalScore}"/>
+                                <GridViewColumn Header="1" Width="64" DisplayMemberBinding="{Binding Tosses[0].TotalScore}"/>
                             </GridView>
                         </ListView.View>
                     </ListView>
@@ -140,21 +137,21 @@
             
             <Grid Grid.Row="3" Grid.Column="1">
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
-                    <ColumnDefinition Width="Auto"></ColumnDefinition>
-                    <ColumnDefinition Width="*"></ColumnDefinition>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
 
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
+                    <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding TossOneInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
-                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding TossTwoInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
-                <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding TossThreeInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
+                <TextBox Grid.Row="0" Grid.Column="0" Text="{Binding TossOneInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"/>
+                <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding TossTwoInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"/>
+                <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding TossThreeInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"/>
             </Grid>
 
-            <Button Grid.Row="3" Grid.Column="2" x:Name="Submit" Content="Submit" Padding="12" Margin="0"></Button>
+            <Button Grid.Row="3" Grid.Column="2" x:Name="Submit" Content="Submit" Padding="12" Margin="0"/>
         </Grid>
     </Border>
 </UserControl>
