--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -25,16 +25,17 @@
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
+                <RowDefinition Height="Auto"></RowDefinition>
                 <RowDefinition Height="*"></RowDefinition>
                 <RowDefinition Height="Auto"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Label Grid.Row="0" Grid.Column="0" Content="{Binding Match.Name}" HorizontalAlignment="Left" Padding="12" FontSize="16"></Label>
-            <Label Grid.Row="0" Grid.Column="2" Content="{Binding BestOf}" HorizontalAlignment="Right" Padding="12" FontSize="16"></Label>
+            <Label Grid.Row="0" Grid.Column="0" Content="{Binding Match.Name}" HorizontalAlignment="Left" Padding="12" FontSize="16" FontWeight="Bold"></Label>
+            <Label Grid.Row="0" Grid.Column="2" Content="{Binding BestOf}" HorizontalAlignment="Right" Padding="12" FontSize="16" FontWeight="Bold"></Label>
 
-            <Label Grid.Row="1" Grid.Column="0" Content="{Binding Player1.Name}" HorizontalAlignment="Left" Padding="12" FontSize="16"></Label>
-            <Image Grid.Row="1" Grid.Column="0" Visibility="{Binding PlayerOneTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" />
-            <Image Grid.Row="1" Grid.Column="0" Visibility="{Binding PlayerOneStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-left.png" Height="10" Width="10" Margin="30,0,0,0"/>
+            <Label Grid.Row="2" Grid.Column="0" Content="{Binding Player1.Name}" HorizontalAlignment="Left" Padding="12" FontSize="16" FontWeight="Bold"></Label>
+            <Image Grid.Row="2" Grid.Column="0" Visibility="{Binding PlayerOneTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" />
+            <Image Grid.Row="2" Grid.Column="0" Visibility="{Binding PlayerOneStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-left.png" Height="10" Width="10" Margin="30,0,0,0"/>
 
             <Grid Grid.Column="1">
                 <Grid.ColumnDefinitions>
@@ -47,21 +48,31 @@
                     <RowDefinition Height="Auto"></RowDefinition>
                 </Grid.RowDefinitions>
 
-                <Label Grid.Row="0" Grid.Column="0" Content="{Binding Player1SetScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,0,30,0"></Label>
+                <!-- <Label Grid.Row="0" Grid.Column="0" Content="{Binding Player1SetScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,0,30,0"></Label> -->
                 <Label Grid.Row="0" Grid.Column="0" Content="{Binding Player1LegScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
                 <Label Grid.Row="0" Grid.Column="1" Content=":" Padding="12" FontSize="24" FontWeight="Bold"></Label>
                 <Label Grid.Row="0" Grid.Column="2" Content="{Binding Player2LegScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
-                <Label Grid.Row="0" Grid.Column="2" Content="{Binding Player2SetScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,0,30,0"></Label>
-
-                <Label Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0" Content="{Binding SetText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
-                <Label Grid.Row="1" Grid.ColumnSpan="3" Grid.Column="0" Content="{Binding LegText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,30,0,0"></Label>
+                <!-- <Label Grid.Row="0" Grid.Column="2" Content="{Binding Player2SetScore}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,0,30,0"></Label> -->
             </Grid>
-            
-            <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2.Name}" HorizontalAlignment="Right" Padding="12" FontSize="16"></Label>
-            <Image Grid.Row="1" Grid.Column="2" Visibility="{Binding PlayerTwoTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" />
-            <Image Grid.Row="1" Grid.Column="2" Visibility="{Binding PlayerTwoStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-right.png" Height="10" Width="10" Margin="0,0,30,0" />
 
-            <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2" Grid.Column="0" HorizontalAlignment="Center">
+            <TextBlock Grid.Row="1" Grid.Column="0" Margin="12,12,12,12" HorizontalAlignment="Left" FontSize="14">
+                <Run Text="Average: "/>
+                <Run Text="{Binding Player1Average}"/>
+            </TextBlock>
+
+            <Label Grid.Row="1" Grid.Column="1" Content="{Binding SetText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold"></Label>
+            <Label Grid.Row="1" Grid.Column="1" Content="{Binding LegText, StringFormat='Leg {0}'}" HorizontalAlignment="Center" Padding="12" FontSize="24" FontWeight="Bold" Margin="0,30,0,0"></Label>
+
+            <TextBlock Grid.Row="1" Grid.Column="2" Margin="12,12,12,12" HorizontalAlignment="Right" FontSize="14">
+                <Run Text="Average: "/>
+                <Run Text="{Binding Player2Average}"/>
+            </TextBlock>
+            
+            <Label Grid.Row="2" Grid.Column="2" Content="{Binding Player2.Name}" HorizontalAlignment="Right" Padding="12" FontSize="16" FontWeight="Bold"></Label>
+            <Image Grid.Row="2" Grid.Column="2" Visibility="{Binding PlayerTwoTurnIndicatorIsVisible}" Source="/Resources/indicator.png" Height="10" Width="10" />
+            <Image Grid.Row="2" Grid.Column="2" Visibility="{Binding PlayerTwoStartedLegIndicatorIsVisible}" Source="/Resources/turnindicator-right.png" Height="10" Width="10" Margin="0,0,30,0" />
+
+            <Border BorderBrush="Black" BorderThickness="1" Grid.Row="3" Grid.Column="0" HorizontalAlignment="Center">
                 <Grid MinWidth="320">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -99,7 +110,7 @@
                 </Grid>
             </Border>
 
-            <Grid Grid.Row="2" Grid.Column="1">
+            <Grid Grid.Row="3" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
@@ -110,12 +121,12 @@
                     <RowDefinition/>
                 </Grid.RowDefinitions>
 
-                <Label Grid.Row="0" Grid.Column="0" Content="180s"/>
-                <Label Grid.Row="0" Grid.Column="1" Content="Total 180s"/>
-                <Label Grid.Row="0" Grid.Column="2" Content="180s"/>
+                <Label Grid.Row="0" Grid.Column="0" Content="180s" HorizontalAlignment="Center"/>
+                <Label Grid.Row="0" Grid.Column="1" Content="Total" HorizontalAlignment="Center"/>
+                <Label Grid.Row="0" Grid.Column="2" Content="180s" HorizontalAlignment="Center"/>
 
-                <Label Grid.Row="1" Grid.Column="0" Content="{Binding Player1Counter180}"/>
-                <Label Grid.Row="1" Grid.Column="1">
+                <Label Grid.Row="1" Grid.Column="0" Content="{Binding Player1Counter180}" HorizontalAlignment="Center"/>
+                <Label Grid.Row="1" Grid.Column="1" HorizontalAlignment="Center">
                     <Label.Content>
                         <MultiBinding Converter="{StaticResource ValueSumConverterKey}">
                             <Binding Path="Player1Counter180"/>
@@ -123,11 +134,11 @@
                         </MultiBinding>
                     </Label.Content>
                 </Label>
-                <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2Counter180}"/>
+                <Label Grid.Row="1" Grid.Column="2" Content="{Binding Player2Counter180}" HorizontalAlignment="Center"/>
 
             </Grid>
 
-            <Border BorderBrush="Black" BorderThickness="1" Grid.Row="2" Grid.Column="2" HorizontalAlignment="Center">
+            <Border BorderBrush="Black" BorderThickness="1" Grid.Row="3" Grid.Column="2" HorizontalAlignment="Center">
                 <Grid MinWidth="320">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -165,9 +176,9 @@
                 </Grid>
             </Border>
 
-            <Button Grid.Row="3" Grid.Column="0" x:Name="RevertTurn" Content="Revert turn" Padding="12" Margin="0"></Button>
+            <Button Grid.Row="4" Grid.Column="0" x:Name="RevertTurn" Content="Revert turn" Padding="12" Margin="0"></Button>
             
-            <Grid Grid.Row="3" Grid.Column="1">
+            <Grid Grid.Row="4" Grid.Column="1">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*"></ColumnDefinition>
                     <ColumnDefinition Width="Auto"></ColumnDefinition>
@@ -183,7 +194,7 @@
                 <TextBox Grid.Row="0" Grid.Column="2" Text="{Binding TossThreeInput, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Center" Padding="0,12,0,12" Margin="0" Width="40" MaxLength="3" FontSize="20" TextAlignment="Center" cal:Message.Attach="[Event KeyDown] = [Action Submit($eventArgs)]"></TextBox>
             </Grid>
 
-            <Button Grid.Row="3" Grid.Column="2" x:Name="Submit" Content="Submit" Padding="12" Margin="0"></Button>
+            <Button Grid.Row="4" Grid.Column="2" x:Name="Submit" Content="Submit" Padding="12" Margin="0"></Button>
         </Grid>
     </Border>
 </UserControl>
