--- a/Dartin/Dartin.Application/Views/ScoreboardView.xaml
+++ b/Dartin/Dartin.Application/Views/ScoreboardView.xaml
@@ -85,7 +85,7 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <ListView ItemsSource="{Binding Player1Turns}" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256">
+                    <ListView ItemsSource="{Binding Player1Turns}" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="0" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                         <ListView.Resources>
                             <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="Foreground" Value="{Binding Path=Valid, Converter={StaticResource BrushColorConverterKey}}"></Setter>
@@ -100,7 +100,7 @@
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <ListView ItemsSource="{Binding Player1Remainders}" Grid.Row="0" Grid.Column="4" Margin="0" MinWidth="64" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
+                    <ListView ItemsSource="{Binding Player1Remainders}" Grid.Row="0" Grid.Column="4" Margin="0" MinWidth="64" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled">
                         <ListView.View>
                             <GridView AllowsColumnReorder="False">
                                 <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"></GridViewColumn>
@@ -151,14 +151,14 @@
                         <RowDefinition/>
                     </Grid.RowDefinitions>
 
-                    <ListView ItemsSource="{Binding Player2Remainders}" Grid.Row="0" Grid.Column="0" Margin="0" MinWidth="64" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Hidden">
+                    <ListView ItemsSource="{Binding Player2Remainders}" Grid.Row="0" Grid.Column="0" Margin="0" MinWidth="64" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         <ListView.View>
                             <GridView AllowsColumnReorder="False">
                                 <GridViewColumn Header="Remainder" Width="64" DisplayMemberBinding="{Binding}"></GridViewColumn>
                             </GridView>
                         </ListView.View>
                     </ListView>
-                    <ListView  ItemsSource="{Binding Player2Turns}" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="1" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256">
+                    <ListView  ItemsSource="{Binding Player2Turns}" Grid.Row="0" Grid.ColumnSpan="4" Grid.Column="1" HorizontalAlignment="Center" BorderThickness="0" MinWidth="256" ScrollViewer.HorizontalScrollBarVisibility="Disabled" ScrollViewer.VerticalScrollBarVisibility="Disabled">
                         <ListView.Resources>
                             <Style TargetType="{x:Type TextBlock}">
                                 <Setter Property="Foreground" Value="{Binding Path=Valid, Converter={StaticResource BrushColorConverterKey}}"></Setter>
